--- a/css/style.css
+++ b/css/style.css
@@ -15,4 +15,55 @@ body {
   font-family: "Montserrat", sans-serif;
   color: var(--second-color);
   background-color: var(--first-color);
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 40px;
+  height: 200px;
+}
+header h1 {
+  margin-bottom: 10px;
+  font-size: 64px;
+  font-weight: 200;
+}
+header p {
+  font-size: 24px;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+h2.title {
+  margin-bottom: 30px;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: 200;
+}
+
+.transactions {
+  width: 1000px;
+}
+.transactions h3 {
+  margin-bottom: 30px;
+  font-size: 28px;
+  text-align: center;
+}
+
+.transaction-list {
+  display: flex;
+}
+
+.income-area, .expenses-area {
+  margin: 0 20px;
+  padding: 30px;
+  width: 50px;
+  border: 1px solid var(--border-color);
 }/*# sourceMappingURL=style.css.map */
