styled transaction panel

--- a/sas/style.scss
+++ b/sas/style.scss
@@ -63,9 +63,191 @@ h2.title {
 	display: flex;
 }
 
-.income-area, .expenses-area {
-margin: 0 20px;
-padding: 30px;
-width: 50px;
-border: 1px solid var(--border-color);
+.income-area,
+.expenses-area {
+	margin: 0 20px;
+	padding: 30px;
+	width: 50%;
+	border: 1px solid var(--border-color);
+}
+.income-area {
+	h3,
+	.transaction-amount {
+		color: rgb(77, 227, 77);
+		font-weight: bold;
+	}
+}
+
+.expenses-area {
+	h3,
+	.transaction-amount {
+		color: rgb(221, 120, 102);
+		font-weight: bold;
+	}
+}
+
+.transaction {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0;
+	border-bottom: 1px solid var(--border-color);
+}
+
+.transaction:last-child {
+	border-bottom: none;
+}
+
+.transaction-name {
+	font-size: 18px;
+
+	i {
+		margin-right: 10px;
+	}
+}
+
+.delete {
+	margin-left: 10px;
+	background: none;
+	border: none;
+	font-size: 18px;
+	color: var(--second-color);
+	cursor: pointer;
+	transition: transform 0.3s;
+}
+
+.delete:hover {
+	transform: scale(0.8);
+}
+
+.options {
+	padding: 80px 40px;
+	width: 500px;
+	border: 1px solid var(--border-color);
+}
+
+.available-money {
+	margin-top: -10px;
+	text-align: center;
+	font-size: 60px;
+}
+
+.controls {
+	display: flex;
+	justify-content: space-around;
+	margin: 50px 0;
+
+	button {
+		padding: 12px 20px;
+		color: var(--second-color);
+		border: 1px solid var(--border-color);
+		border-radius: 5px;
+		background: none;
+		cursor: pointer;
+		transition: color 0.3s, background-color 0.3s;
+	}
+
+	button:hover {
+		color: var(--first-color);
+		background-color: var(--second-color);
+	}
+	i {
+		margin-right: 10px;
+	}
+}
+
+.style-selection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.color-buttons {
+	button {
+		margin: 0 30px;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		cursor: pointer;
+		transition: transform 0.3s;
+	}
+
+	button:hover {
+		transform: scale(0.9);
+	}
+
+	.light {
+		background-color: #f9f9f9;
+		border: 1px solid #14161f;
+	}
+
+	.light {
+		background-color: #14161f;
+		border: 1px solid #f9f9f9;
+	}
+}
+
+.add-transaction-panel {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	background-image: linear-gradient(300deg, #495057 0%, #343a40 75%);
+	h2 {
+		margin-bottom: 0;
+	}
+	label {
+		margin-top: 40px;
+		margin-bottom: 5px;
+		font-size: 26px;
+	}
+	small {
+		margin-bottom: 15px;
+		font-style: italic;
+		color: #ddd;
+	}
+
+	input,
+	select {
+		width: 800px;
+	}
+
+	input,
+	select,
+	button {
+		padding: 10px 20px;
+		border: 1px solid black;
+		border-radius: 5px;
+	}
+	input,
+	select,
+	option {
+		font-size: 18px;
+	}
+
+	.panel-buttons {
+		display: flex;
+		justify-content: center;
+		margin-top: 30px;
+	}
+
+	button {
+		margin: 0 30px;
+		padding: 15px 40px;
+		font-size: 18px;
+		color: #fff;
+		border: 1px solid #fff;
+		background: none;
+		cursor: pointer;
+		transition: background-color 0.3s;
+	}
+
+	button:hover {
+		background-color: #212529;
+	}
 }
