added changeDarkColor and changeDarkColor

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ h2.title {
   background-color: #f9f9f9;
   border: 1px solid #14161f;
 }
-.color-buttons .light {
+.color-buttons .dark {
   background-color: #14161f;
   border: 1px solid #f9f9f9;
 }
