--- a/sas/style.scss
+++ b/sas/style.scss
@@ -180,7 +180,7 @@ h2.title {
 		border: 1px solid #14161f;
 	}
 
-	.light {
+	.dark {
 		background-color: #14161f;
 		border: 1px solid #f9f9f9;
 	}
